# demu

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.dev  LICENSE  README.md  demo.dockerfile  docker-compose.dev.yml
.claude/: settings.json
.claude/rules/: README.md
.claude/rules/common/: development-workflow.md
.claude/rules/rust/: coding-style.md  hooks.md  patterns.md  security.md  testing.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: 01-product.md  02-architecture.md  03-cli-and-repl.md  04-dockerfile-semantics.md  05-run-simulation.md  06-compose-plan.md  07-roadmap.md  08-test-strategy.md
docs/CODEMAPS/: INDEX.md
src/: cli.rs  lib.rs  main.rs
src/engine/: compose.rs  copy.rs  error.rs  mod.rs  mount.rs  run_sim.rs  runner.rs
src/explain/: mod.rs
src/model/: compose.rs  fs.rs  instruction.rs  mod.rs  provenance.rs  state.rs  warning.rs
src/output/: mod.rs  sanitize.rs
src/parser/: compose.rs  dockerfile.rs  error.rs  mod.rs
src/repl/: config.rs  error.rs  mod.rs  parse.rs  path.rs  sanitize.rs
src/repl/commands/: apt.rs  cat.rs  cd.rs  env_cmd.rs  find.rs  help.rs  ls.rs  mod.rs  pip.rs  pwd.rs  which.rs
src/repl/custom/: depends.rs  explain.rs  history.rs  installed.rs  (+5 more)
tasks/: todo.md  v0.4.0-plan.md
tasks/decisions/: 001-virtualfs-representation.md  002-dockerfile-parser.md  003-copy-host-file-reading.md
tests/: cli_entrypoint.rs  compose_engine.rs  compose_fixtures.rs  engine_integration.rs  integration_test.rs  parser_fixtures.rs  scaffold.rs
(+33 files in other folders)
