[package]
name = "demu"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Fast, non-destructive Docker/Compose preview shell"
authors = ["automatedtomato"]
license = "MIT"
repository = "https://github.com/automatedtomato/demu"
homepage = "https://github.com/automatedtomato/demu"
readme = "README.md"
keywords = ["docker", "dockerfile", "preview", "shell", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
rustyline = "14"
thiserror = "2"
anyhow = "1"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unused_imports = "warn"

[lints.clippy]
all = "warn"
unwrap_used = "warn"
expect_used = "warn"
